--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section class="form">
     <div class="form__containter">
       <h1>Оставьте свои контакты</h1>
-      <p><br>Поможем подобрать модель. 
+      <p>Поможем подобрать модель. 
         <br>Выбрать удобный вариант доставки и установки. 
         <br>Гарантия возврата денег.</p>
   <form>
@@ -55,8 +55,8 @@
       </select>
     </div> 
       <button type="submit" class="form__submit">Отправить заявку</button>
+    </form>
     </div>
-  </form>
   </section>
   </body>
   <footer>
